# memory-manager

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  memmem.c  memmem.h  memory-manager.c  memory-manager.h  test.c
